feat: added sessions back-end #78
